# opencode_configuration_xkm

./: .gitignore  .gitmodules  AGENTS.md  opencode.json
c-macro-analyzer/: README.md  debug_condition_blocks.py  debug_elif.py  debug_else.py  debug_eval.py  debug_eval2.py  debug_eval3.py  debug_nested.py  debug_test.py  debug_test2.py  pyproject.toml  requirements.txt  test_debug.py  test_else_bug.py  test_else_fix.py  test_ifpassthru.py  test_pcpp.py
c-macro-analyzer/macro_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  expression.py  logging.py  macro_logging.py  processor.py  symbols.py
c-macro-analyzer/macro_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
c-macro-analyzer/tests/: test_analyzer.py  test_cli.py  test_condition_blocks.py  test_expression.py  test_integration.py  test_logging.py  test_processor.py  test_symbols.py
c-macro-analyzer/tests/samples/: complex.c  header_guard.c  nested.c  real_example.c  simple.c
docs/superpowers/plans/: 2026-03-20-c-macro-analyzer.md  2026-03-21-c-macro-analyzer-output-format-fix.md  2026-03-21-pcpp-macro-analyzer-refactor.md  2026-03-22-macro-analyzer-enhancements.md
plugins/: superpowers.js
skill/analyze-pr/: SKILL.md
skill/analyze-pr/assets/: analysis_template.md
skill/build-wamr/: SKILL.md
skill/fetch-pr/: SKILL.md
skill/fetch-pr/scripts/: fetch_pr.py
skill/skill-creator/: README.md
skills/: planning-with-files  skill-creator.tar  superpowers
skills/analyze-pr/: SKILL.md
skills/c-diff-review/: SKILL.md
skills/static-analyze-wamr/: SKILL.md
(+10 files in other folders)
